[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu_UI/Multiplayer/Host_game_dialog.gd" type="Script" id=1]

[node name="Host_game_dialog" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 250, 150 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 15.0
margin_right = 250.0
margin_bottom = 39.0

[node name="Roomname" type="Label" parent="Panel/VBoxContainer/Name"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
text = "ROOMNAME"

[node name="Name_line" type="LineEdit" parent="Panel/VBoxContainer/Name"]
margin_left = 84.0
margin_right = 234.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
max_length = 64

[node name="Notification" type="Label" parent="Panel/VBoxContainer"]
visible = false
margin_top = 34.0
margin_right = 250.0
margin_bottom = 48.0

[node name="World" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 43.0
margin_right = 250.0
margin_bottom = 63.0

[node name="World" type="Label" parent="Panel/VBoxContainer/World"]
margin_top = 3.0
margin_right = 49.0
margin_bottom = 17.0
text = "WORLD"

[node name="World_option" type="OptionButton" parent="Panel/VBoxContainer/World"]
margin_left = 53.0
margin_right = 203.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )

[node name="Rooms" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 67.0
margin_right = 250.0
margin_bottom = 87.0

[node name="Room" type="Label" parent="Panel/VBoxContainer/Rooms"]
margin_top = 3.0
margin_right = 42.0
margin_bottom = 17.0
text = "ROOM"

[node name="Room_options" type="OptionButton" parent="Panel/VBoxContainer/Rooms"]
margin_left = 46.0
margin_right = 196.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )

[node name="Max_Players" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 91.0
margin_right = 250.0
margin_bottom = 111.0

[node name="Max_player" type="Label" parent="Panel/VBoxContainer/Max_Players"]
margin_top = 3.0
margin_right = 88.0
margin_bottom = 17.0
text = "MAX_PLAYERS"

[node name="Max_players_option" type="OptionButton" parent="Panel/VBoxContainer/Max_Players"]
margin_left = 92.0
margin_right = 242.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )

[node name="Host" type="Button" parent="Panel/VBoxContainer"]
margin_top = 115.0
margin_right = 250.0
margin_bottom = 135.0
text = "HOST"
[connection signal="text_changed" from="Panel/VBoxContainer/Name/Name_line" to="." method="_on_Name_line_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Host" to="." method="_on_Host_pressed"]
